# blueking-console

./: LICENSE.txt  License.txt  README.md  readme_en.md
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  bkpkg-bk-console.yaml  manage.py  pyproject.toml  requirements.txt  settings.py  start.sh  urls.py  wsgi.py
backend/account/: accounts.py  admin.py  backends.py  decorators.py  exceptions.py  forms.py  middlewares.py  models.py  urls.py  views.py
backend/analysis/: admin.py  manager.py  models.py  urls.py  utils.py  views.py
backend/api/: admin.py  constants.py  decorators.py  models.py  urls.py  utils.py  views.py
backend/apigw/: __init__.py  bk_api.py  bk_user.py  bk_user_web.py  client.py  exceptions.py
backend/app/: admin.py  constants.py  manager.py  models.py  utils.py
backend/app_env/: admin.py  constants.py  manager.py  models.py  tests.py
backend/app_esb_auth/: admin.py  constants.py  models.py
backend/app_statistics/: urls.py  utils.py  views.py
backend/audit/: admin.py  constants.py  models.py
backend/bk_i18n/: __init__.py  apps.py  constants.py  middlewares.py  urls.py  views.py
backend/bksuite/: admin.py  constants.py  models.py  tests.py  utils.py  views.py
backend/blueking/: __init__.py
backend/common/: bk_iam.py  constants.py  context_processors.py  db_helper.py  decorators.py  exceptions.py  http.py  license_utils.py  log.py  middlewares.py
backend/components/: esb.py  esb_api.py  http.py  login.py  usermgr.py  usermgr_api.py
backend/conf/: default.py  settings_development.py  settings_env.py  settings_testing.py
backend/desktop/: admin.py  constants.py  manager.py  market_utils.py  market_views.py  models.py  other_views.py  urls.py  utils.py  views.py
backend/engine/: admin.py  constants.py  models.py
backend/healthz/: urls.py  views.py
(+296 files in other folders)
